<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:orientation="vertical">
    
     <com.markupartist.android.widget.ActionBar
	    android:id="@+id/detailsActionbar"
	     style="@style/ActionBar"
        />
    
    <LinearLayout android:layout_height="wrap_content" android:orientation="horizontal" android:layout_width="fill_parent">

    <ImageView
        android:id="@+id/coverImage"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/desc"
        android:src="@drawable/page_turner">
    </ImageView>
    <LinearLayout android:orientation="vertical" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1">
        <TextView android:layout_height="wrap_content" android:textSize="18sp" android:text="@string/title" android:id="@+id/titleField" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="match_parent"></TextView>
        <TextView android:layout_height="wrap_content" android:textSize="14sp" android:text="@string/by_who" android:id="@+id/authorField" android:layout_width="match_parent"></TextView>
        <TextView android:layout_height="wrap_content" android:textSize="12sp" android:text="@string/last_read" android:id="@+id/lastRead" android:layout_width="match_parent"></TextView>
        <TextView android:layout_height="wrap_content" android:textSize="12sp" android:text="@string/never_read" android:id="@+id/addedToLibrary" android:layout_width="match_parent"></TextView>
    </LinearLayout>
     </LinearLayout>
   
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:orientation="vertical" 
    android:layout_weight="1" android:layout_height="match_parent">
     <ImageView    		
    		android:src="@android:drawable/divider_horizontal_dark"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:scaleType="fitXY"
    		android:paddingLeft="5dp"
    		android:paddingRight="5dp"
    		android:paddingBottom="4dp"
    		android:paddingTop="4dp" />
    <TextView android:id="@+id/bookDescription" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text=""/>
    </LinearLayout>
 </LinearLayout>

</ScrollView>